--- a/index.html
+++ b/index.html
@@ -4,18 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <title>alziyara | Travels and Hajj Umrah Services.</title>
     <link rel="icon" href="Images/alziyara-logo.png" type="Image/png">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+    <script src="https://use.fontawesome.com/28260147d4.js"></script>
 </head>
 
 <body>
-
     <header>
         <a href="#" class="logo">alziyara<span>.</span></a>
         <div class="menuToggle" onclick="toggleMenu();"></div>
@@ -27,70 +25,74 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
     </header>
-
     <section class="banner" id="banner">
-
         <div class="content">
             <h2>Feel The Real Way of Travelling.</h2>
-            <p>Alziyara is here to help you for completing your dream journeys in the perfect way. We have
-                best experience in the industry of tour and travels with a large happy travellers completed
-                their journey with us.
+            <p>Alziyara is here to help you for completing your dream journeys in the perfect way. We have best experience in the industry of tour and travels with a large happy travellers completed their journey with us.
             </p>
             <a href="#" class="btn-cu">Contact Us</a>
             <a href="#" class="btn-lm">Learn More</a>
         </div>
 
     </section>
+
+    <section>
+
+        <section class="counter-section fix">
+            <div class="counter-overlay"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 col-sm-6">
+                        <div class="currency-counter count-items">
+                            <i class="fa fa-users"></i>
+                            <span class="currency-count">1,00,000</span>
+                            <h2> <b>+</b> Happy Customers</h2>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6">
+                        <div class="currency-counter count-items">
+                            <i class="fa fa-calendar"></i>
+                            <span class="currency-count">27</span>
+                            <h2> <b>+</b> Years of Experience</h2>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
+    </section>
     <section class="about " id="about">
         <div class="feature-big">
             <div class="container">
                 <div class="row mb-5 site-section border-bottom">
                     <div class="col-lg-7">
-
-
-                        <div id="vidbt2"
-                            onclick="this.nextElementSibling.style.display='block'; this.style.display='none'">
-                            <img src="images/alziyara-about-us.png" class="img-fluid mt-5 mb-5 "
-                                style="cursor:pointer;" />
+                        <div id="vidbt2" onclick="this.nextElementSibling.style.display='block'; this.style.display='none'">
+                            <img src="images/alziyara-about-us.png" class="img-fluid mt-5 mb-5 " style="cursor:pointer;" />
                         </div>
                         <div style="display:none">
                             <div class="embed-responsive embed-responsive-16by9 mt-5 mb-5">
-                                <iframe id="vid2" class="embed-responsive-item"
-                                    src="https://www.youtube.com/embed/nIPmt1ye6HU"
-                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                    allowfullscreen></iframe>
+                                <iframe id="vid2" class="embed-responsive-item" src="https://www.youtube.com/embed/nIPmt1ye6HU" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                         </div>
-
-
-
                     </div>
                     <div class="col-lg-5 pl-lg-5 ml-auto mt-md-5">
                         <h2 class="text-black"><strong>About us.</strong></h2>
-                        <p class="mb-4">Al-Ziyara Travels is a prominent name and best destination for Hajj & Umrah
-                            services apart from domestic and international travel assistance.It has been a leading tour
-                            and travel provider with a successful stint of national and international experience of
-                            providing the customers with satisfactory services. <br>
-                            <br>alziyara have now successfully completed more than 27 years and by dealing with more
-                            than 2 lakh of our happy customers.We can assure you the best services with this year of
-                            experience. <br>
-                            <br>The joy of performing Umrah more than once is beyond words one should perform it
-                            multiple times in life. You will be highly graced with blessings and virtues that are
-                            transformative in nature. With our best packages, we vouch to fill your journey with
-                            comfort, luxury and convenience. </p>
+                        <p class="mb-4">Al-Ziyara Travels is a prominent name and best destination for Hajj & Umrah services apart from domestic and international travel assistance.It has been a leading tour and travel provider with a successful stint of national and
+                            international experience of providing the customers with satisfactory services. <br>
+                            <br>alziyara have now successfully completed more than 27 years and by dealing with more than 2 lakh of our happy customers.We can assure you the best services with this year of experience. <br>
+                            <br>The joy of performing Umrah more than once is beyond words one should perform it multiple times in life. You will be highly graced with blessings and virtues that are transformative in nature. With our best packages, we
+                            vouch to fill your journey with comfort, luxury and convenience. </p>
                     </div>
                 </div>
     </section>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/jquery.counterup.min.js"></script>
+    <script src="js/waypoints.min.js"></script>
+    <script src="js/counter.js"></script>
     <script src="js/main.js"></script>
 </body>
 
