--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
                         <p class="mb-4">Al-Ziyara Travels is a prominent name and best destination for Hajj & Umrah services apart from domestic and international travel assistance.It has been a leading tour and travel provider with a successful stint of national and
                             international experience of providing the customers with satisfactory services. <br>
                             <br>alziyara have now successfully completed more than 27 years and by dealing with more than 2 lakh of our happy customers.We can assure you the best services with this year of experience. <br>
-                            <br>The joy of performing Umrah more than once is beyond words one should perform it multiple times in life. You will be highly graced with blessings and virtues that are transformative in nature. With our best packages, we
-                            vouch to fill your journey with comfort, luxury and convenience. </p>
+                            <br>The joy of performing Umrah more than once is beyond words one should perform it multiple times in life. </p>
                     </div>
                 </div>
     </section>
