--- a/index.html
+++ b/index.html
@@ -85,6 +85,50 @@
                     </div>
                 </div>
     </section>
+
+    <section class="amazing_feature">
+        <div class="container">
+      
+          <div class="row">
+            <div class="col-md-12 text-center">
+                <h2 class="text-black"><strong> Services.</strong></h2>
+              <div class="separator"><i class="below-line-about-icon"></i></div>
+      
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4 col-sm-6 col-xs-12">
+              <div class="single_feature">
+                <div class="feature_icon"><i class="fa fa-ticket fa-3x"></i></div>
+                <hr>
+                <h3><b>TICKETING</b></h3>
+                <p>All International and Domestic ticketing service with fast and customer friendly staff supports.</p>
+              </div>
+            </div><!-- END COL-->
+            <div class="col-md-4 col-sm-6 col-xs-12">
+              <div class="single_feature">
+                <div class="feature_icon"><i class="fa fa-map-marker fa-3x"></i></div>
+                <hr>
+                <h3><b>TOUR PACKAGES</b></h3>
+                <p>International and Domestic budget tour packeges with best budget and proper guidence.</p>
+              </div>
+            </div><!-- END COL-->
+            <div class="col-md-4 col-sm-6 col-xs-12">
+              <div class="single_feature">
+                <div class="feature_icon"><i class="fa fa-plane fa-3x"></i></div>
+                <hr>
+                <h3><b>HAJJ & UMRAH</b></h3>
+                <p>Hajj and Umrah Serivice providers with a big year of experience on the best value to money.</p>
+              </div>
+            </div><!-- END COL-->
+          </div>
+          <!--- END ROW -->
+        </div>
+        <!--- END CONTAINER -->
+      </section>
+
+
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
