service section content edited

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-center">
-                        <h2 class="text-black"><strong> Services.</strong></h2>
+                        <h1 class="text-black"><strong> Services.</strong></h1>
                         <div class="separator"><i class="below-line-about-icon"></i></div>
                     </div>
                 </div>
@@ -154,7 +154,7 @@
                             <div class="feature_icon"><i class="fa fa-passport fa-2x"></i></div>
                             <hr>
                             <h4><b>PASSPORT SERVICE</b></h4>
-                            <p>Hajj and Umrah Serivice providers with a big year of experience on the best value to money.
+                            <p>All type of passport services with complete responsiblity and accuracy.
                             </p>
                         </div>
                     </div>
@@ -163,16 +163,16 @@
                             <div class="feature_icon"><i class="fa fa-bus fa-2x"></i></div>
                             <hr>
                             <h4><b>TOURIST BUS</b></h4>
-                            <p>Hajj and Umrah Serivice providers with a big year of experience on the best value to money.
+                            <p>Full facilitated tourist bus service for family friends and others with packages.
                             </p>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6 col-xs-12">
                         <div class="single_feature">
-                            <div class="feature_icon"><i class="fa fa-list-alt fa-2x"></i></div>
+                            <div class="feature_icon"><i class="fas fa-list-alt fa-2x"></i></div>
                             <hr>
                             <h4><b>OTHER SERVICES</b></h4>
-                            <p>Hajj and Umrah Serivice providers with a big year of experience on the best value to money.
+                            <p>Alziyara giving you all other travels based services with full pleasure.
                             </p>
                         </div>
                     </div>
