service section hover effect added

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="services col-md-4 col-sm-6 col-xs-12">
                         <div class="single_feature">
                             <div class="feature_icon"><i class="fa fa-ticket fa-2x"></i></div>
                             <hr>
@@ -132,7 +132,7 @@
                                 supports.</p>
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="services col-md-4 col-sm-6 col-xs-12">
                         <div class="single_feature">
                             <div class="feature_icon"><i class="fa fa-map-marker fa-2x"></i></div>
                             <hr>
@@ -140,7 +140,7 @@
                             <p>International and Domestic budget tour packeges with best budget and proper guidence.</p>
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="services col-md-4 col-sm-6 col-xs-12">
                         <div class="single_feature">
                             <div class="feature_icon"><i class="fa fa-plane fa-2x"></i></div>
                             <hr>
@@ -149,7 +149,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="services col-md-4 col-sm-6 col-xs-12">
                         <div class="single_feature">
                             <div class="feature_icon"><i class="fa fa-passport fa-2x"></i></div>
                             <hr>
@@ -158,7 +158,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="services col-md-4 col-sm-6 col-xs-12">
                         <div class="single_feature">
                             <div class="feature_icon"><i class="fa fa-bus fa-2x"></i></div>
                             <hr>
@@ -167,7 +167,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="services col-md-4 col-sm-6 col-xs-12">
                         <div class="single_feature">
                             <div class="feature_icon"><i class="fas fa-list-alt fa-2x"></i></div>
                             <hr>
