home ctn actions specified

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 experience in the industry of tour and travels with a large happy travellers completed their journey
                 with us.
             </p>
-            <a href="#" class="btn-cu">Contact Us</a>
-            <a href="#" class="btn-lm">Learn More</a>
+            <a href="#contact" class="btn-cu">Contact Us</a>
+            <a href="#about" class="btn-lm">Learn More</a>
         </div>
     </section>
     <!-- hero section ends -->
@@ -74,14 +74,14 @@
     <!-- hero section end -->
 
     <!-- about section starts -->
-    <section class="about " id="about">
+    <section class="about" id="about">
         <div class="feature-big">
             <div class="container">
                 <div class="row mb-5 site-section border-bottom">
                     <div class="col-lg-7">
                         <div id="vidbt2"
                             onclick="this.nextElementSibling.style.display='block'; this.style.display='none'">
-                            <img src="images/alziyara-about-us.png" class="img-fluid mt-5 mb-5 "
+                            <img src="Images/alziyara-about-us.png" alt="alziyara abot us image" class="img-fluid mt-5 mb-5 "
                                 style="cursor:pointer;" />
                         </div>
                         <div style="display:none">
