--- a/index.html
+++ b/index.html
@@ -181,6 +181,18 @@
         </section>
     </section>
     <!-- service section ends -->
+    <!-- testimonials section starts -->
+    <section id="testimonials">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <h1 class="text-black"><strong> Testimonials.</strong></h1>
+                    <div class="separator"><i class="below-line-about-icon"></i></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- testimonials section ends -->
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
